--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,12 @@ body {
 main {
     display: grid;
     grid-template-columns: 250px 1fr;
-    grid-template-rows: 50px 75px 1fr;
+    grid-template-rows: 50px 1fr;
     font-family: 'Roboto', sans-serif;
 }
 
 div.navbar {
-    grid-row: span 3;
+    grid-row: span 2;
     background-color: #609ea2;
     color: #fff;
     font-size: 24px;
@@ -54,37 +54,6 @@ input {
     background-color: #f0eeed;
 }
 
-.sub-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
-    gap: 1rem;
-}
-
-.sub-header div {
-    display: flex;
-    gap: 1rem;
-}
-
-.sub-header>div:first-child {
-    display: flex;
-    align-items: center;
-}
-
-.sub-header>div:first-child div {
-    display: block;
-}
-
-.sub-header button {
-    background-color: #609ea2;
-    color: #fff;
-    border-radius: 1rem;
-    border: 0;
-    padding: 0.3rem;
-    width: 80px;
-}
-
 div.content {
     background-color: #f0eeed;
     padding: 3rem;
@@ -95,27 +64,81 @@ div.content {
     display: flex;
     flex-direction: column;
     height: 100%;
+    width: minmax(200px, 500px)
+}
+
+.content-container > div:first-child {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.content-container h3 {
+    margin-left: 24px;
+}
+
+.add-button {
+    background-color: #609ea2;
+    color: #fff;
+    border-radius: 50%;
+    border: 0;
+    width: 40px;
+    height: 40px;
+    margin-right: 8px;
+    font-size: 30px;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.add-button::before,
+.add-button::after {
+    position: absolute;
+    content: '';
+    width: 4px;
+    height: 24px;
+    background-color: #fff;
+}
+
+.add-button::before {
+    transform: rotate(90deg);
 }
 
 .card-container {
     display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(auto-fit, min(350px));
+    gap: 0.3rem;
+    grid-template-columns: 1fr;
+    grid-auto-rows: 50px;
 }
 
 .card {
     background-color: #fff;
     border: 0;
     border-radius: 0.5rem;
-}
-
-.card-container .card {
     border-left: 10px solid #c92c6d;
-    padding: 0 1rem 1rem 1rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.card .card-icons {
-    text-align: end;
+.task {
+    margin-right: auto;
+}
+
+.due-date {
+    width: 100px;
+}
+
+.prio {
+    width: 50px;
+}
+
+.done-btn, .delete-btn {
+    border: 0;
+    margin-left: 6px;
 }
 
 /*
