Sort tasks by date and mark past dates red

--- a/src/style.css
+++ b/src/style.css
@@ -54,13 +54,6 @@ ul, li {
     gap: 1rem;
 }
 
-input {
-    width: min(100%, 500px);
-    border-radius: 1rem;
-    border: 0px;
-    background-color: #f0eeed;
-}
-
 div.content:not(.form-bg) {
     background-color: #f0eeed;
     padding: 3rem;
@@ -181,6 +174,10 @@ div.content:not(.form-bg) {
     width: 100px;
 }
 
+.past-date {
+    color: #f00;
+}
+
 .prio {
     width: 50px;
     text-align: center;
@@ -228,7 +225,7 @@ div.content:not(.form-bg) {
 form {
     background-color: #f0eeed;
     margin-left: 340px;
-    padding: 20px 40px 20px 20px;
+    padding: 20px;
     border: 1px solid #f0eeed;
     width: 500px;
     height: 250px;
@@ -238,10 +235,20 @@ form {
     align-items: start;
 }
 
-input {
+input, #todo-prio {
+    border-radius: 1rem;
+    background-color: #f0eeed;
     border: 1px solid;
     height: 2rem;
-    padding-left: 1rem;
+    padding: 0 1rem;
+}
+
+input {
+    width: min(100%, 465.5px);
+}
+
+#todo-prio {
+    width: min(100%, 535px);
 }
 
 #submit-btn {
