--- a/src/style.css
+++ b/src/style.css
@@ -1,267 +1,284 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Ysabeau+SC:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Ysabeau+SC:wght@500&display=swap");
 
 :root {
-    --form-background: rgb(0,0,0,0.4);
+  --form-background: rgb(0, 0, 0, 0.4);
 }
 
 body {
-    height: 100vh;
+  height: 100vh;
 }
 
 main {
-    height: 100%;
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    grid-template-rows: 50px 1fr;
-    font-family: 'Roboto', sans-serif;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  grid-template-rows: 50px 1fr;
+  font-family: "Roboto", sans-serif;
+}
+
+.invisible {
+  visibility: hidden;
 }
 
 div.navbar {
-    grid-row: span 2;
-    background-color: #609ea2;
-    color: #fff;
-    font-size: 24px;
-    z-index: 20;
+  grid-row: span 2;
+  background-color: #609ea2;
+  color: #fff;
+  font-size: 24px;
+  z-index: 20;
 }
 
 div.navbar > * {
-    margin: 100px 2rem 2rem;
+  margin: 100px 2rem 2rem;
+  padding-left: 24px;
 }
 
-ul, li {
-    text-decoration: none;
-    list-style: none;
-    margin-bottom: 20px;
+.nav-head {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: start;
+  align-items: center;
+  font-weight: bold;
+}
+
+ul,
+li {
+  text-decoration: none;
+  list-style: none;
+  margin-bottom: 20px;
+  padding: 0;
+}
+
+li,
+.nav-head {
+  cursor: pointer;
 }
 
 .home {
-    padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    padding: 1rem;
-    gap: 1rem;
-}
-
-.search-container {
-    flex: 1;
-}
-
-.searchbar {
-    display: flex;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  gap: 1rem;
 }
 
 div.content:not(.form-bg) {
-    background-color: #f0eeed;
-    padding: 3rem;
-    gap: 3rem;
+  background-color: #f0eeed;
+  padding: 3rem;
+  gap: 3rem;
 }
 
 .form-bg {
-    background-color: var(--form-background);
-    padding: 3rem;
-    gap: 3rem;
+  background-color: var(--form-background);
+  padding: 3rem;
+  gap: 3rem;
 }
 
 .content-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: minmax(200px, 500px)
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: minmax(200px, 500px);
 }
 
 .content-container > div:first-child {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content-container h3 {
-    margin-left: 24px;
+  margin-left: 24px;
 }
 
 .add-button {
-    background-color: #609ea2;
-    color: #fff;
-    border-radius: 50%;
-    border: 0;
-    width: 40px;
-    height: 40px;
-    margin-right: 8px;
-    font-size: 30px;
-    font-weight: 900;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  background-color: #609ea2;
+  color: #fff;
+  border-radius: 50%;
+  border: 0;
+  width: 40px;
+  height: 40px;
+  margin-right: 8px;
+  font-size: 30px;
+  font-weight: 900;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
 }
 
 .add-button:hover {
-    width: 42px;
-    height: 42px;
+  width: 42px;
+  height: 42px;
 }
 
 .add-button::before,
 .add-button::after {
-    position: absolute;
-    content: '';
-    width: 4px;
-    height: 24px;
-    background-color: #fff;
+  position: absolute;
+  content: "";
+  width: 4px;
+  height: 24px;
+  background-color: #fff;
 }
 
 .add-button::before {
-    transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .card-container {
-    display: grid;
-    gap: 0.3rem;
-    grid-template-columns: 1fr;
-    grid-auto-rows: 50px;
+  display: grid;
+  gap: 0.3rem;
+  grid-template-columns: 1fr;
+  grid-auto-rows: 50px;
 }
 
 .card {
-    background-color: #fff;
-    border: 0;
-    border-radius: 0.5rem;
-    border-left: 10px solid #c92c6d;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: #fff;
+  border: 0;
+  border-radius: 0.5rem;
+  border-left: 10px solid #c92c6d;
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #card-container .card .done-btn:hover {
-    filter: invert(62%) sepia(5%) saturate(3339%) hue-rotate(135deg) brightness(95%);
+  filter: invert(62%) sepia(5%) saturate(3339%) hue-rotate(135deg)
+    brightness(95%);
 }
 
 #card-container .card .delete-btn:hover {
-    filter: invert(27%) sepia(63%) saturate(2206%) hue-rotate(309deg) brightness(86%);
+  filter: invert(27%) sepia(63%) saturate(2206%) hue-rotate(309deg)
+    brightness(86%);
 }
 
 #done-card-container .card {
-    color: grey;
-    text-decoration: line-through;
+  color: grey;
+  text-decoration: line-through;
 }
 
 #done-card-container .card .done-btn,
 #done-card-container .card .delete-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 #done-card-container .card .done-btn::after,
 #done-card-container .card .delete-btn::after {
-    position: absolute;
-    content: '';
-    width: 25px;
-    height: 25px;
-    background-color: #fff;
-    z-index: 1;
+  position: absolute;
+  content: "";
+  width: 25px;
+  height: 25px;
+  background-color: #fff;
+  z-index: 1;
+}
+
+.done-btn,
+.delete-btn {
+  cursor: pointer;
+  border: 0;
+  margin-left: 6px;
 }
 
 .task {
-    margin-right: auto;
+  margin-right: auto;
 }
 
 .due-date {
-    width: 100px;
+  width: 100px;
 }
 
 .past-date {
-    color: #f00;
+  color: #f00;
 }
 
 .prio {
-    width: 50px;
-    text-align: center;
-    font-weight: 700;
-    padding: 3px 0;
-    border-radius: 3px;
-    margin-right: 3px;
+  width: 50px;
+  text-align: center;
+  font-weight: 700;
+  padding: 3px 0;
+  border-radius: 3px;
+  margin-right: 3px;
 }
 
 #card-container .low {
-    background-color: #609ea2;
-    color: #fff;
+  background-color: #609ea2;
+  color: #fff;
 }
 
 #card-container .mid {
-    background-color: #9d9c9b;
-    color: #fff;
+  background-color: #9d9c9b;
+  color: #fff;
 }
 
 #card-container .high {
-    background-color: #c92c6d;
-    color: #fff;
-}
-
-.done-btn, .delete-btn {
-    border: 0;
-    margin-left: 6px;
+  background-color: #c92c6d;
+  color: #fff;
 }
 
 .form-div {
-    display: block;
-    position: fixed;
-    padding-top: 140px;
-    z-index: 10;
-    left: 0px;
-    top: 50px;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: var(--form-background);
-    justify-items: center;
-    align-items: center;
+  display: block;
+  position: fixed;
+  padding-top: 140px;
+  z-index: 10;
+  left: 0px;
+  top: 50px;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: var(--form-background);
+  justify-items: center;
+  align-items: center;
 }
 
 form {
-    background-color: #f0eeed;
-    margin-left: 340px;
-    padding: 20px;
-    border: 1px solid #f0eeed;
-    width: 500px;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: start;
+  background-color: #f0eeed;
+  margin-left: 340px;
+  padding: 20px;
+  border: 1px solid #f0eeed;
+  width: 500px;
+  height: 250px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: start;
 }
 
-input, #todo-prio {
-    border-radius: 1rem;
-    background-color: #f0eeed;
-    border: 1px solid;
-    height: 2rem;
-    padding: 0 1rem;
+input,
+#todo-prio {
+  border-radius: 1rem;
+  background-color: #f0eeed;
+  border: 1px solid;
+  height: 2rem;
+  padding: 0 1rem;
 }
 
 input {
-    width: min(100%, 465.5px);
+  width: min(100%, 465.5px);
 }
 
 #todo-prio {
-    width: min(100%, 535px);
+  width: min(100%, 535px);
 }
 
 #submit-btn {
-    border: 1px solid;
-    height: 2.5rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    border-radius: 1.25rem;
-    background-color: #609ea2;
-    color: #f0eeed;
-    font-weight: bold;
+  border: 1px solid;
+  height: 2.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 1.25rem;
+  background-color: #609ea2;
+  color: #f0eeed;
+  font-weight: bold;
+  cursor: pointer;
 }
-
 
 /*
 #f0eeed = hellgrau
